# text_compression

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: compress.py  tf-compress.ipynb
scripts/utils/: UtilClass.py
