[tool.poetry]
name = "text-compression"
version = "0.1.0"
description = "Large text compression benchmark"
authors = ["Dakoro <david.korobetski@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.29.5"
numpy = "1.26.4"
tensorrt = "^10.2.0.post1"

# [tool.poetry.group.tensorflow]
# optional = true
# [tool.poetry.group.tensorflow.dependencies]
# tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
# tf-keras = "^2.17.0"


[tool.poetry.group.torch]
optional = true
[tool.poetry.group.torch.dependencies]
torch = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
